--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack"
   },
   "repository": {
     "type": "git",
@@ -16,12 +16,29 @@
     "url": "https://github.com/danielakarwowska/Users/issues"
   },
   "homepage": "https://github.com/danielakarwowska/Users#readme",
-  "devDependencies": {
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+  "dependencies": {
+    "nanoid": "^3.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "webpack-plugin-serve": "^1.6.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "file-loader": "^6.2.0",
+    "html-replace-webpack-plugin": "^2.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest-environment-jsdom": "^28.1.2",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "ts-jest": "^28.0.5",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
-}
+  }
+
