--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   },
   "homepage": "https://github.com/danielakarwowska/Users#readme",
   "dependencies": {
-    "json-server": "^0.17.0",
+    "12": "^1.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack-plugin-serve": "^1.6.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -32,13 +31,17 @@
     "html-replace-webpack-plugin": "^2.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest-environment-jsdom": "^28.1.2",
+    "json": "^11.0.0",
+    "json-server": "^0.17.0",
     "nanoid": "^3.3.4",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "server": "^1.0.37",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-plugin-serve": "^1.6.0"
   }
 }
